# ask-lab-2025

./: CMakeLists.txt  README.md
src/: bitmap.c  bitmap.h  dynamic_array.c  dynamic_array.h  maze.c  model.c  model.h  prims_maze.c  prims_maze.h  renderer.c  renderer.h
